--- a/block-BRaaaa/code/index.html
+++ b/block-BRaaaa/code/index.html
@@ -16,6 +16,7 @@
           <input type="checkbox" id="1" />
           <label for="1">Checkbox</label>
           <span>x</span>
+          <button>Watched</button>
         </li> -->
         <hr />
       </ul>
