--- a/block-BRaaae/code/index.html
+++ b/block-BRaaae/code/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
   </head>
   <body>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@17/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
