--- a/block-BRaaae/code/index.html
+++ b/block-BRaaae/code/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Movie Watch List</h1>
+    <div class="container">
+      <input class="movie-name" type="text" placeholder="Enter a movie name" />
+      <ul class="movies-list">
+        <!-- <li>
+          <input type="checkbox" id="1" />
+          <label for="1">Checkbox</label>
+          <span>x</span>
+          <button>Watched</button>
+        </li> -->
+        <hr />
+      </ul>
+    </div>
     <script
       crossorigin
       src="https://unpkg.com/react@17/umd/react.development.js"
